--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "WebProTime Jekyll Theme"
+title                    : "Jekyll-Demo"
 title_separator          : "-"
-name                     : "WebProTime Jekyll Theme"
+name                     : "Jekyll-Demo"
 description              : "An amazing website."
-url                      : "https://webprotime.github.io/" # the base hostname & protocol for your site e.g. "https://webprotime.com/topics/jekyll"
+url                      : "https://jekyll-demo.github.io/" # the base hostname & protocol for your site e.g. "https://webprotime.com/topics/jekyll"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "webprotime/webprotime-jekyll"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
